syntax = "proto3";

package gfc.proto;
option java_multiple_files = true;

// The greeting service definition.
service GreetingService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
